2008-03-04  Lillian Angel  <langel@redhat.com>

	* rt/gnu/*: Removed.
	* Makefile.am: Removed icedtea-paths.patch.
	* Makefile.in: Regenerated.
	* patches/icedtea-paths.patch: Removed.

2008-03-04  Lillian Angel  <langel@redhat.com>

	* rt/com/sun/image/codec/jpeg/*: Removed unneeded plugs.

2008-03-04  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Check for xulrunner-1.9.
	* configure: Regenerated.

2008-03-04  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-lesstif-64.patch: Reverted.
	* Makefile.am: Added above patch.
	* Makefile.in: Regenerated.

2008-03-04  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-ports.patch: Moved HotSpot 7 specific hunk to...
	* patches/icedtea-hotspot7-ports.patch: New file.
	* Makefile.am: Added the above.
	* Makefile.in: Regenerated.

2008-03-04  Joshua Sumali  <jsumali@redhat.com>

	* patches/icedtea-use-system-tzdata.patch: Add missing hunk.

2008-03-04  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-hotspot-6b06-7b24.patch: New file.
	* patches/icedtea-hotspot7-build-fixes.patch: Likewise.
	* patches/icedtea-bytecodeInterpreter.patch: Likewise.
	* patches/icedtea-bytecodeInterpreterWithChecks.patch: Likewise.
	* Makefile.am: Apply the above patches when zero is being built.
	* Makefile.in: Regenerated.

	* patches/icedtea-linker-options.patch: Reinstate missing hunks.
	* patches/icedtea-ports.patch: Likewise.
	* patches/icedtea-zero.patch: Likewise.

2008-03-04  Lillian Angel  <langel@redhat.com>

	* generated/*: Updated generated files.
	* Makefile.am: Fixed distclean target.
	* Makefile.in: Regenerated.

2008-03-03  Lillian Angel  <langel@redhat.com>

	* generated/sun/awt/X11/generator/sizer.32: Regenerated.
	* generated/sun/awt/X11/generator/sizer.32.c: Likewise.
	* patches/icedtea-lesstif-64.patch: Removed.
	* Makefile.am: Removed above patch.
	* Makefile.in: Regenerated.
	* rt/java/io/PushbackReader.java: New file.

2008-03-03  Joshua Sumali  <jsumali@redhat.com>
